--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>
             CV - Karol Ślusarz 
         </title>
+        <meta charset="utf8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/80f2d861b6.js"></script>
@@ -32,6 +33,12 @@
                             <span><i class="far fa-window-restore"></i> <a href="https://www.dobreprogramy.pl/karol221-10">https://www.dobreprogramy.pl/karol221-10</a></span>
                     </div>
                 </div>
+                <div class="header-social">
+                    <h3>Znajomość języków obcych</h3>
+                    <div class="header-social-list">
+                            <span><i class="fas fa-language"></i><b> Język angielski</b> - B1 w mowie i piśmie</b></span>
+                    </div>
+                </div>
             </div>
             <img class="my-photo" src="https://media.licdn.com/dms/image/C4E03AQHRKRNu93c_ZA/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=bSUEAbgyMTPOXNtBlOwGs44z4BhFGnn38vQQrlW9PC4">
         </div>
@@ -54,8 +61,8 @@
                             </div>
         
                             <div class="stepper-content">
-                                <b>teraz - 2017</b>
-                                <p><b>Politechnika Świętokrzyska</b> - informatyka.</p>
+                                <b>2017 - teraz</b>
+                                <p><b>Politechnika Świętokrzyska</b> - informatyka</p>
                                 <p>Specjalizacja - systemy informacyjne</p>
                             </div>
                         </div>
@@ -65,8 +72,8 @@
                                 <div class="line"></div>
                             </div>
                             <div class="stepper-content">
-                                    <b>2017 - 2013</b>
-                                    <p><b>Technikum nr 3 w Ostrowcu Świętokrzyskim</b></p>
+                                    <b>2013 - 2017</b>
+                                    <p><b>Technikum nr 3 w&nbsp;Ostrowcu Świętokrzyskim</b></p>
                                     <p>Technik informatyk</p>
                             </div>
                         </div>
@@ -81,10 +88,9 @@
                                     <div class="line"></div>
                                 </div>
                                 <div class="stepper-content">
-                                        <img style="width: 60px; height: 60px;" src="https://media.licdn.com/dms/image/C4D0BAQENOg4drl7cFw/company-logo_400_400/0?e=1576713600&v=beta&t=IDIRgE_2gVUzger3QXJE7JbecWNu7WzNdmED0w1R2kU">
                                         <b>lipiec 2019 - wrzesień 2019</b>
-                                        <p>Back-end developer (Java) w firmie Altar</p>
-                                        <i><b>Obowiązki:</b> Tworzenie oprogramowania używając frameworku Spring oraz podejścia <b>Domain Driven Design</b> Tworzenie testów jednostkowych i integracyjnych do oprogramowania.</i>
+                                        <p>Backend developer (Java) w&nbsp;firmie Altar</p>
+                                        <i><b>Obowiązki:</b> Tworzenie oprogramowania używając frameworku Spring oraz podejścia <b>Domain Driven Design</b> Tworzenie testów jednostkowych i&nbsp;integracyjnych do oprogramowania.</i>
                                 </div>
                         </div>
                         <div class="step completed ended">
@@ -94,8 +100,8 @@
                             </div>
                             <div class="stepper-content">
                                 <b>maj 2016 - czerwiec 2016</b>
-                                <p>Staż w Forbildungsakademie der Wirtschaft (FAW) gGmbH, Zwickau Niemcy</p>
-                                <i><b>Obowiązki: </b> Tworzenie stron internetowych w HTML, CSS i Javascript.</i>
+                                <p>Staż w &nbsp;Fortbildungsakademie der Wirtschaft (FAW) gGmbH, Zwickau, Niemcy</p>
+                                <i><b>Obowiązki: </b> Tworzenie stron internetowych w&nbsp;HTML, CSS i Javascript.</i>
                             </div>
                     </div>
                 </div>
@@ -105,23 +111,23 @@
             <div class="row-column">
                 <h3>Projekty i umiejętności</h3>
                 <ul>
-                    <li><b>Zamek elektroniczny (C++, Raspberry Pi, Java, Spring, SQL) </b>Pozwala m.in. na łatwe otwieranie drzwi za pomocą zarejestrowanych kart zbliżeniowych. Logowanie zdarzeń. (Więcej na blogu)</li>
-                    <li><b>Wtyczka USOS-średnia (Javascript) </b> wtyczka dla przeglądarki Google Chrome rozszerzająca USOS o możliwość obliczania średniej z semestru/roku/toku studiów</li>
+                    <li><b>Zamek elektroniczny (C++, Raspberry Pi, Linux, Java, Spring, SQL) </b>Pozwala m.in. na łatwe otwieranie drzwi za pomocą zarejestrowanych kart zbliżeniowych. Logowanie zdarzeń. (Więcej na blogu)</li>
+                    <li><b>Wtyczka USOS-średnia (Javascript) </b> wtyczka dla przeglądarki Google Chrome rozszerzająca USOS o&nbsp;możliwość obliczania średniej z&nbsp;semestru/roku/toku studiów</li>
                     <li><b>Więcej projektów znajduje się na Linkedinie/blogu</b></li>
                 </ul>
             </div>
             <div class="row-column">
                 <h3>Osiągnięcia</h3>
                 <ul>
-                    <li><b>kwiecień 2019</b> I miejsce w II Świętokrzyskim Teście z Informatyki</li>
-                    <li><b>2018 </b>Stypendium rektora dla najlepszych studentów Politechniki Swiętokrzyskiej</li>
-                    <li><b>listopad 2018</b> Certyfikat Cisco Cerified Entry Networking Techician</li>
-                    <li><b>czerwiec 2018</b> Hackathon Idea Kielce: Wyróżnienie za wyjątkowy sposób wykorzystania danych miejskich.</li>
+                    <li><b>kwiecień 2019:</b> I miejsce w II Świętokrzyskim Teście z&nbspInformatyki</li>
+                    <li><b>2018: </b>Stypendium rektora dla najlepszych studentów Politechniki Świętokrzyskiej</li>
+                    <li><b>listopad 2018:</b> Certyfikat Cisco Certified Entry Network Technician</li>
+                    <li><b>czerwiec 2018:</b> Hackathon Idea Kielce: Wyróżnienie za&nbspwyjątkowy sposób wykorzystania danych miejskich.</li>
                 </ul>
             </div>
         </div>
         <div class="rodo">
-            Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu tej oraz przyszłych rekrutacji (zgodnie z ustawą z dnia 10 maja 2018 roku o ochronie danych osobowych (Dz. Ustaw z 2018, poz. 1000) oraz zgodnie z Rozporządzeniem Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (RODO)).
+            Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu tej oraz przyszłych rekrutacji (zgodnie z&nbsp;ustawą z dnia 10 maja 2018 roku o ochronie danych osobowych (Dz. Ustaw z 2018, poz. 1000) oraz zgodnie z Rozporządzeniem Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i&nbsp;w&nbsp;sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (RODO)).
         </div>
     </div>
 </body>
